# Stellar_Level_1

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js
contracts/hello_world/: Cargo.toml
contracts/hello_world/src/: test.rs
contracts/stellar-freighter-app/: Cargo.toml
contracts/stellar-freighter-app/src/: test.rs
src/: App.tsx  index.css
